2003-07-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Increased MUNGE_SOCKET_BACKLOG from 64 to 128.

2003-06-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c:
	  Augmented err msgs with strerror() to track down failed fd_write_n().

2003-06-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c(create_conf):
	  Changed default value for got_clock_skew flag to true.

2003-06-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c(_munge_msg_recv):
	  Fixed bug with unexpected message length assert.

2003-05-30  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential-v1-format: Added.

2003-05-29  Chris Dunlap  <cdunlap@llnl.gov>

	* libcommon/munge_defs.h: Increased credential's salt from 56b to 64b.

	* src/libcommon/munge_msg.h, src/libmunge/ctx.c, src/libmunge/ctx.h,
	  src/libmunge/decode.c, src/libmunge/encode.c, src/libmunge/munge.h,
	  src/munge/unmunge.c, src/munged/conf.c, src/munged/conf.h,
	  src/munged/dec_v1.c, src/munged/enc_v1.c, src/munged/munged.c:
	  Added IP address where cred was encoded into the credential.
	  This breaks backwards-compatibility with existing credentials.
	  Added MUNGE_OPT_ADDR4 enum (and tweaked the enum values).

2003-05-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.h: Update docs for munge_decode() to reflect
	  that an additional NUL is appended to the returned buffer.

	* src/munge/munge.c, src/munge/unmunge.c:
	  Changed manner in which strtol() is checked for error.

	* src/libmunge/msg_client.c(_munge_msg_client_connect):
	  Changed client's connect() retry backoff from exponential to linear.

	* src/munged/munged.c(segv_handler): Added.

2003-05-16  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Increased MUNGE_SOCKET_BACKLOG from 10 to 64.

	* src/libcommon/log.c, src/libcommon/log.h:
	  Added log_errno().  All callers changed.

2003-05-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c(dec_v1_validate_time):